--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ repositories {
 
 dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.apache.tomcat.embed:tomcat-embed-jasper"
+    implementation "javax.servlet:jstl"
     developmentOnly "org.springframework.boot:spring-boot-devtools"
     testImplementation "org.springframework.boot:spring-boot-starter-test"
 }
