--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.apache.tomcat.embed:tomcat-embed-jasper"
     implementation "javax.servlet:jstl"
+    implementation "opensymphony:sitemesh:2.5.0"
     developmentOnly "org.springframework.boot:spring-boot-devtools"
     testImplementation "org.springframework.boot:spring-boot-starter-test"
 }
